--- a/ecommerce/requirements.txt
+++ b/ecommerce/requirements.txt
@@ -13,6 +13,7 @@ cffi==1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
 cryptography==42.0.1
+dj-database-url==0.5.0
 Django==3.2.23
 dnspython==2.4.2
 Flask==3.0.0
