--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,21 @@
-aiohttp==3.8.6
-aiosignal==1.3.1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
 asgiref==3.7.2
-async-timeout==4.0.3
-attrs==23.1.0
-black==23.12.1
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.2.0
-click==8.1.7
-cryptography==42.0.1
+cloudinary==1.36.0
+crispy-bootstrap5==0.7
 dj-database-url==0.5.0
-Django==3.2.23
-dnspython==2.4.2
-Flask==3.0.0
-Flask-Login==0.6.3
-Flask-Mail==0.9.1
-Flask-PyMongo==2.3.0
-Flask-SQLAlchemy==3.1.1
-Flask-Testing==0.8.1
-Flask-WTF==1.2.1
-frozenlist==1.4.0
-git-filter-repo==2.38.0
-google-auth==2.22.0
-google-auth-oauthlib==1.0.0
-gspread==5.10.0
-gunicorn==21.2.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-multidict==6.0.4
-mypy-extensions==1.0.0
+dj3-cloudinary-storage==0.0.6
+django==4.2.7
+django-allauth==0.57.0
+django-crispy-forms==2.1
+django-summernote==0.8.20.0
+gunicorn==20.1.0
 oauthlib==3.2.2
-openai==0.28.1
-packaging==23.2
-pathspec==0.12.1
-pillow==10.2.0
-pipi==1.0.1
-platformdirs==4.1.0
-psycopg2==2.9.9
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycodestyle==2.11.1
-pycparser==2.21
-pymongo==4.6.0
-python-decouple==3.8
-python-dotenv==1.0.1
-pytz==2023.3.post1
-requests==2.31.0
+Pillow==8.3.2
+psycopg2==2.9.6
+PyJWT==2.8.0
+python3-openid==3.2.0
+python-decouple==3.4
 requests-oauthlib==1.3.1
-rsa==4.9
-six==1.16.0
-SQLAlchemy==2.0.21
+stripe==2.56.0
 sqlparse==0.4.4
-stripe==8.3.0
-tqdm==4.66.1
-typing_extensions==4.8.0
-urllib3==1.26.16
-Werkzeug==3.0.1
-WTForms==3.1.2
-yarl==1.9.2
+urllib3==1.26.18
+whitenoise==5.3.0
